8946 fmdump(1m) should be more resilient in the face of missing message content Reviewed by: Robert Mustacchi <robert.mustacchi@joyent.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Gordon Ross <gwr@nexenta.com>